# mcp-ssh-host

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml  docker-arm64.yml  docker-images.yml  linux-binaries.yml
examples/: config.toml
src/: config.rs  edit.rs  error.rs  exec.rs  fs.rs  http.rs  main.rs  mcp.rs  policy.rs  ssh.rs  state.rs  target.rs  terminal.rs  tools.rs  util.rs
src/core/: config.rs  error.rs  mod.rs  oauth.rs  policy.rs  state.rs  target.rs
src/protocol/: gpts.rs  http.rs  mcp.rs  mod.rs
src/tooling/: edit.rs  exec.rs  fs.rs  mod.rs  terminal.rs  tools.rs
src/transport/: ssh.rs
